@@ -1,5 +1,6 @@
 8 February 2007: Wouter
 	- added tcp test.
+	- replay storage.
 
 7 February 2007: Wouter
 	- return answer with the same ID as query was sent with.
